--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,71 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- ONBOARD STYLES -->
+    <style>
+      body {
+        width: 300px;
+        height: 100px;
+        padding: 2%;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+        padding: 0px;
+        margin: 0px;
+      }
+
+      #header {
+        margin-bottom: calc(0.5rem + 6vmin);
+        border-bottom: 1px solid #ccc;
+      }
+
+      #header h1, #actions h1  {
+        color: #00a99d;
+        font-size: calc(0.5rem + 8vmin);
+      }
+
+      #header h2 {
+        color: #777;
+        font-size: calc(0.5rem + 3vmin);
+      }
+
+      #header h2.subhead {
+        font-weight: normal;
+        margin-bottom: calc(0.5rem + 6vmin); /* Maintain same distances as header */
+      }
+
+      #header h2.alert {
+        color: #999;
+      }
+
+      .subtext {
+        font-size: calc(0.5rem + 3vmin);
+        color: #999;
+      }
+
+    </style>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <!-- EXTENSION POPUP HEADER -->
+    <div id="header">
+      <h1>Sibyl <span class="subtext">The Web API for Forms</span></h1>
+      <h2 class="alert subhead">v.0.1-alpha</h2>
+    </div>
+    <!-- END EXTENSION POPUP HEADER -->
+
+    <!-- EXTENSION POPUP ACTIONS -->
+    <div id="actions">
+      <h1>Actions <span class="subtext">What would you like to do?</span></h1>
+    </div>
+    <!-- END EXTENSION POPUP ACTIONS -->
+
+    <!-- EXTENSION POPUP FOOTER -->
+    <div id="footer">
+
+    </div>
+    <!-- END EXTENSION POPUP HEADER -->
   </body>
 </html>
